--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "strapi-5-plugin-responsive-backend": "^0.0.4",
+    "strapi-plugin-tablify": "^1.0.3",
     "styled-components": "^6.0.0"
   },
   "engines": {
